syntax = "proto3";

package idas.service.models;

import "models/models.proto";

option go_package = "github.com/MicroOps-cn/idas/pkg/service/models;models";


message AppProxyUrl {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_sizecache) = false;
  option (gogoproto.goproto_unkeyed) = false;

  idas.service.models.Model model = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",omitempty"];
  string app_proxy_id = 2 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = 'type:char(36);'];
  string name = 3 [(gogoproto.jsontag) = "name", (gogoproto.moretags) = 'gorm:"type:varchar(50);"'];
  string method = 4 [(gogoproto.jsontag) = "method", (gogoproto.moretags) = 'gorm:"type:varchar(8);"'];
  string url = 5 [(gogoproto.jsontag) = "url", (gogoproto.moretags) = 'gorm:"type:varchar(50);"'];
  uint32 index = 6;
}

message AppProxy {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_sizecache) = false;
  option (gogoproto.goproto_unkeyed) = false;

  idas.service.models.Model model = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",omitempty"];
  string app_id = 2 [(gogoproto.jsontag) = "appId", (gogoproto.moretags) = 'gorm:"type:char(36);unique;not null"'];
  string domain = 3 [(gogoproto.jsontag) = "domain", (gogoproto.moretags) = 'gorm:"type:varchar(50);" valid:"required"'];
  string upstream = 4 [(gogoproto.jsontag) = "upstream", (gogoproto.moretags) = 'gorm:"type:varchar(50);" valid:"required"'];
  string urls = 5 [(gogoproto.jsontag) = "urls", (gogoproto.customtype) = "AppProxyUrls", (gogoproto.nullable) = false, (gogoproto.moretags) = 'gorm:"foreignKey:AppProxyId"'];
  bool insecure_skip_verify = 6[(gogoproto.jsontag) = "insecureSkipVerify",(gogoproto.moretags) = 'gorm:"not null;default:0"'];
  bool transparent_server_name = 7[(gogoproto.jsontag) = "transparentServerName",(gogoproto.moretags) = 'gorm:"not null;default:0"'];
}

message AppRole {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_sizecache) = false;
  option (gogoproto.goproto_unkeyed) = false;

  idas.service.models.Model model = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",omitempty"];
  string app_id = 2 [(gogoproto.jsontag) = "appId", (gogoproto.moretags) = 'gorm:"type:char(36);not null" valid:"required"'];
  string name = 3 [(gogoproto.jsontag) = "name", (gogoproto.moretags) = 'gorm:"type:varchar(50);" valid:"required"'];
  repeated string urls = 4 [(gogoproto.customtype) = "*AppProxyUrl", (gogoproto.jsontag) = "-", (gogoproto.moretags) = 'gorm:"many2many:app_role_url" valid:"required"'];
  repeated string urlsId = 5[(gogoproto.jsontag) = "urls", (gogoproto.moretags) = 'gorm:"-"'];
  repeated string users = 6 [(gogoproto.customtype) = "*User", (gogoproto.jsontag) = "users", (gogoproto.moretags) = 'gorm:"-" valid:"required"'];
  bool is_default = 7 [(gogoproto.jsontag) = "isDefault,omitempty"];
}

message App {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_sizecache) = false;
  option (gogoproto.goproto_unkeyed) = false;

  idas.service.models.Model model = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",omitempty"];
  string name = 2 [(gogoproto.jsontag) = "name", (gogoproto.moretags) = 'gorm:"type:varchar(50);not null;unique"'];
  string description = 3 [(gogoproto.jsontag) = "description", (gogoproto.moretags) = 'gorm:"type:varchar(200)"'];
  string avatar = 4 [(gogoproto.jsontag) = "avatar", (gogoproto.moretags) = 'gorm:"type:varchar(128)"'];
  idas.service.models.AppMeta.GrantType grant_type = 5 [(gogoproto.jsontag) = "grantType", (gogoproto.moretags) = 'gorm:"type:TINYINT(3);not null;default:0"'];
  idas.service.models.AppMeta.GrantMode grant_mode = 6 [(gogoproto.jsontag) = "grantMode", (gogoproto.moretags) = 'gorm:"type:TINYINT(3);not null;default:0"'];
  idas.service.models.AppMeta.Status status = 7 [(gogoproto.jsontag) = "status", (gogoproto.moretags) = 'gorm:"type:TINYINT(3);not null;default:0"'];
  string users = 8 [(gogoproto.customtype) = "Users", (gogoproto.nullable) = false, (gogoproto.jsontag) = "users,omitempty", (gogoproto.moretags) = 'gorm:"-"'];
  string roles = 9 [(gogoproto.customtype) = "AppRoles", (gogoproto.nullable) = false, (gogoproto.jsontag) = "roles,omitempty", (gogoproto.moretags) = 'gorm:"-"'];
  idas.service.models.AppProxy proxy = 10 [(gogoproto.jsontag) = "proxy,omitempty", (gogoproto.moretags) = 'gorm:"-"'];

  // Custom fields
}

